# alt-voice

./: .gitmodules  CMakeLists.txt
include/: ISoundInput.h
src/: CSoundInput.cpp  CSoundInput.h  CSoundOutput.cpp  CSoundOutput.h  CStreamPlayer.cpp  CStreamPlayer.h  alt-voice.cpp
